[gd_scene load_steps=10 format=2]

[ext_resource path="res://Other Resources/karma future.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Main/Main Menu/Main.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.172549, 0.117647, 0.192157, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.243137, 0.231373, 0.396078, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 1

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.695652 )
colors = PoolColorArray( 0.0627451, 0.0705882, 0.109804, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 640.0
margin_bottom = 362.0
color = Color( 0.0941176, 0.133333, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="New Game" type="TextureButton" parent="Buttons"]
margin_left = 20.0
margin_top = 100.0
margin_right = 203.0
margin_bottom = 153.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/New Game"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Buttons/New Game"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Buttons/New Game"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Buttons/New Game"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Buttons/New Game"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Buttons"]
margin_left = 20.0
margin_top = 165.0
margin_right = 173.0
margin_bottom = 218.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Options"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Buttons/Options"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Buttons/Options"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Buttons/Options"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Buttons/Options"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="TextureButton" parent="Buttons"]
margin_left = 20.0
margin_top = 230.0
margin_right = 118.0
margin_bottom = 283.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Help"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Buttons/Help"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Buttons/Help"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Buttons/Help"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Buttons/Help"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Buttons"]
margin_left = 19.613
margin_top = 295.0
margin_right = 109.613
margin_bottom = 348.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 4 )
texture_hover = SubResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Exit"]
margin_left = 4.94974
margin_top = -3.53554
margin_right = 129.95
margin_bottom = 45.4645
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.968627, 0.952941, 0.717647, 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="ColorRect" parent="Buttons/Exit"]
anchor_right = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="ColorRect" parent="Buttons/Exit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="ColorRect" parent="Buttons/Exit"]
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.8147e-06
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="ColorRect" parent="Buttons/Exit"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.368627, 0.356863, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Buttons/New Game" to="." method="_on_New_Game_button_up"]
[connection signal="button_up" from="Buttons/Options" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="Buttons/Help" to="." method="_on_Help_button_up"]
[connection signal="button_up" from="Buttons/Exit" to="." method="_on_Exit_button_up"]
